include_directories(
	"${CMAKE_CURRENT_SOURCE_DIR}/include"
)

include_directories(
	"${CMAKE_CURRENT_SOURCE_DIR}/src/include"
)

set(
	SANGUIS_CREATOR_INCLUDE_FILES
	include/sanguis/creator/background_grid.hpp
	include/sanguis/creator/background_grid_fwd.hpp
	include/sanguis/creator/background_tile.hpp
	include/sanguis/creator/background_tile_fwd.hpp
	include/sanguis/creator/deserialize.hpp
	include/sanguis/creator/difference_type.hpp
	include/sanguis/creator/enemy_type.hpp
	include/sanguis/creator/enemy_type_fwd.hpp
	include/sanguis/creator/exception.hpp
	include/sanguis/creator/generate.hpp
	include/sanguis/creator/generator_count.hpp
	include/sanguis/creator/generator_count_type.hpp
	include/sanguis/creator/generator_index.hpp
	include/sanguis/creator/grid.hpp
	include/sanguis/creator/grid_crange.hpp
	include/sanguis/creator/grid_crange_fwd.hpp
	include/sanguis/creator/grid_fwd.hpp
	include/sanguis/creator/name.hpp
	include/sanguis/creator/opening.hpp
	include/sanguis/creator/opening_container.hpp
	include/sanguis/creator/opening_count.hpp
	include/sanguis/creator/pos.hpp
	include/sanguis/creator/pos_fwd.hpp
	include/sanguis/creator/seed.hpp
	include/sanguis/creator/seed_fwd.hpp
	include/sanguis/creator/serialize.hpp
	include/sanguis/creator/signed_pos.hpp
	include/sanguis/creator/signed_pos_fwd.hpp
	include/sanguis/creator/size_type.hpp
	include/sanguis/creator/spawn.hpp
	include/sanguis/creator/spawn_container.hpp
	include/sanguis/creator/spawn_fwd.hpp
	include/sanguis/creator/spawn_pos.hpp
	include/sanguis/creator/spawn_type.hpp
	include/sanguis/creator/spawn_type_fwd.hpp
	include/sanguis/creator/symbol.hpp
	include/sanguis/creator/tile.hpp
	include/sanguis/creator/tile_fwd.hpp
	include/sanguis/creator/tile_grid.hpp
	include/sanguis/creator/tile_grid_fwd.hpp
	include/sanguis/creator/tile_is_solid.hpp
	include/sanguis/creator/tile_size.hpp
	include/sanguis/creator/top_parameters.hpp
	include/sanguis/creator/top_parameters_fwd.hpp
	include/sanguis/creator/top_result.hpp
	include/sanguis/creator/top_result_fwd.hpp
)

SET(
	SANGUIS_CREATOR_SRC_FILES
	src/aux/deserialization/background_grid.cpp
	src/aux/deserialization/grid.cpp
	src/aux/deserialization/opening_container.cpp
	src/aux/deserialization/spawn.cpp
	src/aux/deserialization/spawn_container.cpp
	src/aux/deserialization/top_result.cpp
	src/aux/find_opposing_cell.cpp
	src/aux/generator_map.cpp
	src/aux/generators/lines.cpp
	src/aux/generators/maze.cpp
	src/aux/neumann_neighbors.cpp
	src/aux/parameters.cpp
	src/aux/perimeter_to_coords.cpp
	src/aux/result.cpp
	src/aux/serialization/background_grid.cpp
	src/aux/serialization/grid.cpp
	src/aux/serialization/opening_container.cpp
	src/aux/serialization/spawn.cpp
	src/aux/serialization/spawn_container.cpp
	src/aux/serialization/top_result.cpp
	src/deserialize.cpp
	src/exception.cpp
	src/generate.cpp
	src/generator_count.cpp
	src/generator_index.cpp
	src/include/sanguis/creator/aux/bresenham.hpp
	src/include/sanguis/creator/aux/deserialization/background_grid.hpp
	src/include/sanguis/creator/aux/deserialization/grid.hpp
	src/include/sanguis/creator/aux/deserialization/opening_container.hpp
	src/include/sanguis/creator/aux/deserialization/spawn.hpp
	src/include/sanguis/creator/aux/deserialization/spawn_container.hpp
	src/include/sanguis/creator/aux/deserialization/tile_grid.hpp
	src/include/sanguis/creator/aux/deserialization/top_result.hpp
	src/include/sanguis/creator/aux/filled_rect.hpp
	src/include/sanguis/creator/aux/find_opposing_cell.hpp
	src/include/sanguis/creator/aux/generator_function.hpp
	src/include/sanguis/creator/aux/generator_map.hpp
	src/include/sanguis/creator/aux/generator_map_type.hpp
	src/include/sanguis/creator/aux/generators/lines.hpp
	src/include/sanguis/creator/aux/generators/maze.hpp
	src/include/sanguis/creator/aux/neighbor_array.hpp
	src/include/sanguis/creator/aux/neighbor_array_fwd.hpp
	src/include/sanguis/creator/aux/neumann_neighbors.hpp
	src/include/sanguis/creator/aux/parameters.hpp
	src/include/sanguis/creator/aux/parameters_fwd.hpp
	src/include/sanguis/creator/aux/perimeter_to_coords.hpp
	src/include/sanguis/creator/aux/rand_value.hpp
	src/include/sanguis/creator/aux/randgen.hpp
	src/include/sanguis/creator/aux/randgen_fwd.hpp
	src/include/sanguis/creator/aux/rect.hpp
	src/include/sanguis/creator/aux/result.hpp
	src/include/sanguis/creator/aux/result_fwd.hpp
	src/include/sanguis/creator/aux/serialization/background_grid.hpp
	src/include/sanguis/creator/aux/serialization/grid.hpp
	src/include/sanguis/creator/aux/serialization/opening_container.hpp
	src/include/sanguis/creator/aux/serialization/spawn.hpp
	src/include/sanguis/creator/aux/serialization/spawn_container.hpp
	src/include/sanguis/creator/aux/serialization/tile_grid.hpp
	src/include/sanguis/creator/aux/serialization/top_result.hpp
	src/randgen.cpp
	src/serialize.cpp
	src/spawn.cpp
	src/tile_is_solid.cpp
	src/top_parameters.cpp
	src/top_result.cpp
)

set(
	SANGUIS_CREATOR_FILES
	"${SANGUIS_CREATOR_INCLUDE_FILES};${SANGUIS_CREATOR_SRC_FILES}"
)

fcppt_utils_add_source_groups(
	"${SANGUIS_CREATOR_FILES}"
)

add_library(
	sanguiscreator
	SHARED
	${SANGUIS_CREATOR_FILES}
)

target_link_libraries(
	sanguiscreator
	${fcppt_core_TARGET}
	${sgecore_TARGET}
	${sgeparse_TARGET}
)

install(
	TARGETS
	sanguiscreator
	DESTINATION
	${INSTALL_LIBRARY_DIR}
)
