set(
	SANGUIS_GUI_FILES
	include/sanguis/gui/click_callback.hpp
	include/sanguis/gui/click_function.hpp
	include/sanguis/gui/context.hpp
	include/sanguis/gui/context_fwd.hpp
	include/sanguis/gui/default_aspect.hpp
	include/sanguis/gui/get_focus.hpp
	include/sanguis/gui/get_focus_fwd.hpp
	include/sanguis/gui/master.hpp
	include/sanguis/gui/master_fwd.hpp
	include/sanguis/gui/text_callback.hpp
	include/sanguis/gui/text_function.hpp
	include/sanguis/gui/widget/base.hpp
	include/sanguis/gui/widget/base_fwd.hpp
	include/sanguis/gui/widget/base_unique_ptr.hpp
	include/sanguis/gui/widget/button.hpp
	include/sanguis/gui/widget/button_fwd.hpp
	include/sanguis/gui/widget/container.hpp
	include/sanguis/gui/widget/container_fwd.hpp
	include/sanguis/gui/widget/edit.hpp
	include/sanguis/gui/widget/edit_fwd.hpp
	include/sanguis/gui/widget/optional_ref.hpp
	include/sanguis/gui/widget/optional_ref_fwd.hpp
	include/sanguis/gui/widget/reference.hpp
	include/sanguis/gui/widget/reference_fwd.hpp
	include/sanguis/gui/widget/reference_vector.hpp
	src/aux_/fill_rect.cpp
	src/context.cpp
	src/default_aspect.cpp
	src/include/sanguis/gui/aux_/fill_rect.hpp
	src/master.cpp
	src/widget/base.cpp
	src/widget/button.cpp
	src/widget/container.cpp
	src/widget/edit.cpp
)

sanguis_generate_symbol_header(
	gui
)

include_directories(
	"${CMAKE_CURRENT_SOURCE_DIR}/include"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/include"
)

sanguis_add_library(
	sanguisgui
	"${SANGUIS_GUI_FILES}"
	"${fcppt_core_TARGET};${sgefont_TARGET};${sgefontdraw_TARGET};${sgeimagecolor_TARGET};${sgeinput_TARGET};${sgerenderer_TARGET};${sgerucksack_TARGET};${sgesprite_TARGET}"
)

add_subdirectory(
	test
)
