set(
	SANGUIS_GUI_FILES
	include/sanguis/gui/click_callback.hpp
	include/sanguis/gui/click_function.hpp
	include/sanguis/gui/context.hpp
	include/sanguis/gui/context_fwd.hpp
	include/sanguis/gui/default_aspect.hpp
	include/sanguis/gui/duration.hpp
	include/sanguis/gui/fixed_area.hpp
	include/sanguis/gui/focus_change.hpp
	include/sanguis/gui/focus_change_fwd.hpp
	include/sanguis/gui/get_focus.hpp
	include/sanguis/gui/get_focus_fwd.hpp
	include/sanguis/gui/index.hpp
	include/sanguis/gui/index_callback.hpp
	include/sanguis/gui/index_function.hpp
	include/sanguis/gui/index_fwd.hpp
	include/sanguis/gui/master.hpp
	include/sanguis/gui/master_fwd.hpp
	include/sanguis/gui/minimum_size_area.hpp
	include/sanguis/gui/needed_width.hpp
	include/sanguis/gui/needed_width_from_strings.hpp
	include/sanguis/gui/needed_width_fwd.hpp
	include/sanguis/gui/optional_index.hpp
	include/sanguis/gui/optional_index_fwd.hpp
	include/sanguis/gui/optional_needed_width.hpp
	include/sanguis/gui/optional_needed_width_fwd.hpp
	include/sanguis/gui/string_container.hpp
	include/sanguis/gui/text_callback.hpp
	include/sanguis/gui/text_color.hpp
	include/sanguis/gui/text_color_fwd.hpp
	include/sanguis/gui/text_function.hpp
	include/sanguis/gui/viewport_adaptor.hpp
	include/sanguis/gui/widget/bar.hpp
	include/sanguis/gui/widget/bar_fwd.hpp
	include/sanguis/gui/widget/base.hpp
	include/sanguis/gui/widget/base_fwd.hpp
	include/sanguis/gui/widget/base_unique_ptr.hpp
	include/sanguis/gui/widget/box_container.hpp
	include/sanguis/gui/widget/box_container_fwd.hpp
	include/sanguis/gui/widget/button.hpp
	include/sanguis/gui/widget/button_fwd.hpp
	include/sanguis/gui/widget/choices.hpp
	include/sanguis/gui/widget/choices_fwd.hpp
	include/sanguis/gui/widget/container.hpp
	include/sanguis/gui/widget/container_fwd.hpp
	include/sanguis/gui/widget/dummy.hpp
	include/sanguis/gui/widget/dummy_fwd.hpp
	include/sanguis/gui/widget/edit.hpp
	include/sanguis/gui/widget/edit_fwd.hpp
	include/sanguis/gui/widget/expander.hpp
	include/sanguis/gui/widget/expander_fwd.hpp
	include/sanguis/gui/widget/frame.hpp
	include/sanguis/gui/widget/frame_fwd.hpp
	include/sanguis/gui/widget/image.hpp
	include/sanguis/gui/widget/image_fwd.hpp
	include/sanguis/gui/widget/optional_focus.hpp
	include/sanguis/gui/widget/optional_focus_fwd.hpp
	include/sanguis/gui/widget/optional_ref.hpp
	include/sanguis/gui/widget/optional_ref_fwd.hpp
	include/sanguis/gui/widget/reference.hpp
	include/sanguis/gui/widget/reference_alignment_pair.hpp
	include/sanguis/gui/widget/reference_alignment_pair_fwd.hpp
	include/sanguis/gui/widget/reference_alignment_vector.hpp
	include/sanguis/gui/widget/reference_fwd.hpp
	include/sanguis/gui/widget/reference_name_pair.hpp
	include/sanguis/gui/widget/reference_name_pair_fwd.hpp
	include/sanguis/gui/widget/reference_name_vector.hpp
	include/sanguis/gui/widget/reference_tree.hpp
	include/sanguis/gui/widget/reference_tree_fwd.hpp
	include/sanguis/gui/widget/reference_tree_vector.hpp
	include/sanguis/gui/widget/reference_vector.hpp
	include/sanguis/gui/widget/static_text.hpp
	include/sanguis/gui/widget/static_text_fwd.hpp
	include/sanguis/gui/widget/tab.hpp
	include/sanguis/gui/widget/tab_fwd.hpp
	include/sanguis/gui/widget/text.hpp
	include/sanguis/gui/widget/text_fwd.hpp
	include/sanguis/gui/widget/tree.hpp
	include/sanguis/gui/widget/tree_fwd.hpp
	include/sanguis/gui/widget/tree_unique_ptr.hpp
	include/sanguis/gui/widget/unique_ptr.hpp
	include/sanguis/gui/widget/unique_ptr_tree.hpp
	include/sanguis/gui/widget/unique_ptr_tree_fwd.hpp
	include/sanguis/gui/widget/unique_ptr_tree_vector.hpp
	include/sanguis/gui/widget/unique_ptr_vector.hpp
	src/aux_/draw_image.cpp
	src/aux_/fill_rect.cpp
	src/aux_/shrink_rect.cpp
	src/aux_/style/background_color.cpp
	src/aux_/style/border_color.cpp
	src/aux_/style/text_color.cpp
	src/context.cpp
	src/default_aspect.cpp
	src/fixed_area.cpp
	src/include/sanguis/gui/aux_/draw_image.hpp
	src/include/sanguis/gui/aux_/draw_sprite.hpp
	src/include/sanguis/gui/aux_/fill_rect.hpp
	src/include/sanguis/gui/aux_/shrink_rect.hpp
	src/include/sanguis/gui/aux_/sprite_type_choices.hpp
	src/include/sanguis/gui/aux_/style/background_color.hpp
	src/include/sanguis/gui/aux_/style/border_color.hpp
	src/include/sanguis/gui/aux_/style/inner_border.hpp
	src/include/sanguis/gui/aux_/style/outer_border.hpp
	src/include/sanguis/gui/aux_/style/spacing.hpp
	src/include/sanguis/gui/aux_/style/text_color.hpp
	src/master.cpp
	src/minimum_size_area.cpp
	src/needed_width_from_strings.cpp
	src/viewport_adaptor.cpp
	src/widget/bar.cpp
	src/widget/base.cpp
	src/widget/box_container.cpp
	src/widget/button.cpp
	src/widget/choices.cpp
	src/widget/container.cpp
	src/widget/dummy.cpp
	src/widget/edit.cpp
	src/widget/expander.cpp
	src/widget/frame.cpp
	src/widget/image.cpp
	src/widget/reference_alignment_pair.cpp
	src/widget/reference_name_pair.cpp
	src/widget/static_text.cpp
	src/widget/tab.cpp
	src/widget/text.cpp
	src/widget/tree.cpp
)

include_directories(
	"${CMAKE_CURRENT_SOURCE_DIR}/src/include"
)

sanguis_add_library(
	gui
	"${SANGUIS_GUI_FILES}"
	"${fcppt_core_TARGET};${sgefont_TARGET};${sgefontdraw_TARGET};${sgeimagecolor_TARGET};${sgeinput_TARGET};${sgerenderer_TARGET};${sgerucksack_TARGET};${sgesprite_TARGET};${sgetexture_TARGET}"
)

add_subdirectory(
	test
)
