set(
	SANGUIS_GUI_FILES
	include/sanguis/gui/background/base.hpp
	include/sanguis/gui/background/base_fwd.hpp
	include/sanguis/gui/background/colored.hpp
	include/sanguis/gui/background/none.hpp
	include/sanguis/gui/click_callback.hpp
	include/sanguis/gui/click_function.hpp
	include/sanguis/gui/context.hpp
	include/sanguis/gui/context_fwd.hpp
	include/sanguis/gui/create_texture.hpp
	include/sanguis/gui/draw.hpp
	include/sanguis/gui/duration.hpp
	include/sanguis/gui/fill_color.hpp
	include/sanguis/gui/fill_color_fwd.hpp
	include/sanguis/gui/fill_level.hpp
	include/sanguis/gui/fill_level_fwd.hpp
	include/sanguis/gui/focus_change.hpp
	include/sanguis/gui/focus_change_fwd.hpp
	include/sanguis/gui/get_focus.hpp
	include/sanguis/gui/get_focus_fwd.hpp
	include/sanguis/gui/gravity.hpp
	include/sanguis/gui/gravity_fwd.hpp
	include/sanguis/gui/index.hpp
	include/sanguis/gui/index_callback.hpp
	include/sanguis/gui/index_function.hpp
	include/sanguis/gui/index_fwd.hpp
	include/sanguis/gui/main_area/base.hpp
	include/sanguis/gui/main_area/base_fwd.hpp
	include/sanguis/gui/main_area/fixed_position.hpp
	include/sanguis/gui/main_area/screen_corner.hpp
	include/sanguis/gui/main_area/viewport_adaptor.hpp
	include/sanguis/gui/master.hpp
	include/sanguis/gui/master_fwd.hpp
	include/sanguis/gui/needed_width.hpp
	include/sanguis/gui/needed_width_from_strings.hpp
	include/sanguis/gui/needed_width_fwd.hpp
	include/sanguis/gui/optional_index.hpp
	include/sanguis/gui/optional_index_fwd.hpp
	include/sanguis/gui/optional_needed_width.hpp
	include/sanguis/gui/optional_needed_width_fwd.hpp
	include/sanguis/gui/renderer/base.hpp
	include/sanguis/gui/renderer/base_fwd.hpp
	include/sanguis/gui/renderer/base_unique_ptr.hpp
	include/sanguis/gui/renderer/create_scoped.hpp
	include/sanguis/gui/renderer/create_stateless.hpp
	include/sanguis/gui/string_container.hpp
	include/sanguis/gui/style/base.hpp
	include/sanguis/gui/style/base_fwd.hpp
	include/sanguis/gui/style/base_unique_ptr.hpp
	include/sanguis/gui/style/create.hpp
	include/sanguis/gui/text_callback.hpp
	include/sanguis/gui/text_color.hpp
	include/sanguis/gui/text_color_fwd.hpp
	include/sanguis/gui/text_function.hpp
	include/sanguis/gui/widget/bar.hpp
	include/sanguis/gui/widget/bar_fwd.hpp
	include/sanguis/gui/widget/base.hpp
	include/sanguis/gui/widget/base_fwd.hpp
	include/sanguis/gui/widget/base_unique_ptr.hpp
	include/sanguis/gui/widget/box_container.hpp
	include/sanguis/gui/widget/box_container_fwd.hpp
	include/sanguis/gui/widget/button.hpp
	include/sanguis/gui/widget/button_fwd.hpp
	include/sanguis/gui/widget/choices.hpp
	include/sanguis/gui/widget/choices_fwd.hpp
	include/sanguis/gui/widget/container.hpp
	include/sanguis/gui/widget/container_fwd.hpp
	include/sanguis/gui/widget/dummy.hpp
	include/sanguis/gui/widget/dummy_fwd.hpp
	include/sanguis/gui/widget/edit.hpp
	include/sanguis/gui/widget/edit_fwd.hpp
	include/sanguis/gui/widget/expander.hpp
	include/sanguis/gui/widget/expander_fwd.hpp
	include/sanguis/gui/widget/frame.hpp
	include/sanguis/gui/widget/frame_fwd.hpp
	include/sanguis/gui/widget/image.hpp
	include/sanguis/gui/widget/image_fwd.hpp
	include/sanguis/gui/widget/minimum_size.hpp
	include/sanguis/gui/widget/minimum_size_fwd.hpp
	include/sanguis/gui/widget/optional_focus.hpp
	include/sanguis/gui/widget/optional_focus_fwd.hpp
	include/sanguis/gui/widget/optional_ref.hpp
	include/sanguis/gui/widget/optional_ref_fwd.hpp
	include/sanguis/gui/widget/preferred_size.hpp
	include/sanguis/gui/widget/reference.hpp
	include/sanguis/gui/widget/reference_alignment_pair.hpp
	include/sanguis/gui/widget/reference_alignment_pair_fwd.hpp
	include/sanguis/gui/widget/reference_alignment_vector.hpp
	include/sanguis/gui/widget/reference_fwd.hpp
	include/sanguis/gui/widget/reference_name_pair.hpp
	include/sanguis/gui/widget/reference_name_pair_fwd.hpp
	include/sanguis/gui/widget/reference_name_vector.hpp
	include/sanguis/gui/widget/reference_tree.hpp
	include/sanguis/gui/widget/reference_tree_fwd.hpp
	include/sanguis/gui/widget/reference_tree_vector.hpp
	include/sanguis/gui/widget/reference_vector.hpp
	include/sanguis/gui/widget/static_text.hpp
	include/sanguis/gui/widget/static_text_fwd.hpp
	include/sanguis/gui/widget/tab.hpp
	include/sanguis/gui/widget/tab_fwd.hpp
	include/sanguis/gui/widget/text.hpp
	include/sanguis/gui/widget/text_fwd.hpp
	include/sanguis/gui/widget/tree.hpp
	include/sanguis/gui/widget/tree_fwd.hpp
	include/sanguis/gui/widget/tree_unique_ptr.hpp
	include/sanguis/gui/widget/unique_ptr.hpp
	include/sanguis/gui/widget/unique_ptr_tree.hpp
	include/sanguis/gui/widget/unique_ptr_tree_fwd.hpp
	include/sanguis/gui/widget/unique_ptr_tree_vector.hpp
	include/sanguis/gui/widget/unique_ptr_vector.hpp
	src/background/base.cpp
	src/background/colored.cpp
	src/background/none.cpp
	src/context.cpp
	src/create_texture.cpp
	src/draw.cpp
	src/impl/draw_image.cpp
	src/impl/draw_image_repeat.cpp
	src/impl/fill_rect.cpp
	src/impl/gravity_east.cpp
	src/impl/gravity_south.cpp
	src/impl/make_container_pair.cpp
	src/impl/relayout_ancestor.cpp
	src/impl/renderer/scoped.cpp
	src/impl/renderer/stateless.cpp
	src/impl/shrink_rect.cpp
	src/impl/style/background_color.cpp
	src/impl/style/border_color.cpp
	src/impl/style/simple.cpp
	src/impl/style/text_color.cpp
	src/include/sanguis/gui/impl/draw_image.hpp
	src/include/sanguis/gui/impl/draw_image_repeat.hpp
	src/include/sanguis/gui/impl/draw_sprite.hpp
	src/include/sanguis/gui/impl/fill_rect.hpp
	src/include/sanguis/gui/impl/gravity_east.hpp
	src/include/sanguis/gui/impl/gravity_south.hpp
	src/include/sanguis/gui/impl/image_sprite_choices.hpp
	src/include/sanguis/gui/impl/make_container_pair.hpp
	src/include/sanguis/gui/impl/relayout_ancestor.hpp
	src/include/sanguis/gui/impl/renderer/scoped.hpp
	src/include/sanguis/gui/impl/renderer/stateless.hpp
	src/include/sanguis/gui/impl/shrink_rect.hpp
	src/include/sanguis/gui/impl/sprite_type_choices.hpp
	src/include/sanguis/gui/impl/style/background_color.hpp
	src/include/sanguis/gui/impl/style/border_color.hpp
	src/include/sanguis/gui/impl/style/inner_border.hpp
	src/include/sanguis/gui/impl/style/outer_border.hpp
	src/include/sanguis/gui/impl/style/simple.hpp
	src/include/sanguis/gui/impl/style/spacing.hpp
	src/include/sanguis/gui/impl/style/text_color.hpp
	src/include/sanguis/gui/impl/swap_pair.hpp
	src/main_area/base.cpp
	src/main_area/fixed_position.cpp
	src/main_area/screen_corner.cpp
	src/main_area/viewport_adaptor.cpp
	src/master.cpp
	src/needed_width_from_strings.cpp
	src/renderer/base.cpp
	src/renderer/create_scoped.cpp
	src/renderer/create_stateless.cpp
	src/style/base.cpp
	src/style/create.cpp
	src/widget/bar.cpp
	src/widget/base.cpp
	src/widget/box_container.cpp
	src/widget/button.cpp
	src/widget/choices.cpp
	src/widget/container.cpp
	src/widget/dummy.cpp
	src/widget/edit.cpp
	src/widget/expander.cpp
	src/widget/frame.cpp
	src/widget/image.cpp
	src/widget/minimum_size.cpp
	src/widget/preferred_size.cpp
	src/widget/reference_alignment_pair.cpp
	src/widget/reference_name_pair.cpp
	src/widget/static_text.cpp
	src/widget/tab.cpp
	src/widget/text.cpp
	src/widget/tree.cpp
)

sanguis_add_library(
	gui
	"${SANGUIS_GUI_FILES}"
	DEPS
		${fcppt_core_TARGET}
		${sgefont_TARGET}
		${sgefontdraw_TARGET}
		${sgeimagecolor_TARGET}
		${sgeinput_TARGET}
		${sgerenderer_TARGET}
		${sgerucksack_TARGET}
		${sgerucksackviewport_TARGET}
		${sgesprite_TARGET}
		${sgetexture_TARGET}
	INCLUDES
		"${CMAKE_CURRENT_SOURCE_DIR}/src/include"
)

add_subdirectory(
	test
)
